[package]
name = "elf"
version = "0.6.1"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cole14/rust-elf/"
documentation = "https://docs.rs/elf/latest/elf/"
description = "A pure-rust library for parsing ELF files"
keywords = ["binary", "elf", "object", "parser"]
categories = ["no-std", "os", "embedded"]
readme = "README.md"
edition = "2021"

[lib]
name = "elf"

[dependencies]

[features]
default = ["std", "to_str"]
std = []
to_str = []
