[package]
name = "elf"
version = "0.7.4"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cole14/rust-elf/"
documentation = "https://docs.rs/elf/latest/elf/"
description = "A pure-rust library for parsing ELF files"
keywords = ["binary", "elf", "object", "parser"]
categories = ["no-std", "os", "embedded"]
exclude = [".gitignore", "/.github", "/sample-objects"]
readme = "README.md"
edition = "2021"

[lib]
name = "elf"

[dependencies]

[features]
default = ["std", "to_str"]
std = []
to_str = []
# Enable for nightly feature(error_in_core) to impl core::error::Error on ParseError
nightly = []
