[package]
name = "elf"
version = "0.8.0-dev"
authors = ["Christopher Cole <chris.cole.09@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/cole14/rust-elf/"
documentation = "https://docs.rs/elf/latest/elf/"
description = "A pure-rust library for parsing ELF files"
keywords = ["binary", "elf", "object", "parser"]
categories = ["no-std", "os", "embedded"]
exclude = [".gitignore", "/.github", "/sample-objects"]
readme = "README.md"
edition = "2021"
rust-version = "1.81.0"

[lib]
name = "elf"

[dependencies]

[features]
default = ["alloc" , "std", "to_str"]
alloc = []
std = ["alloc"]
to_str = []
